TM-6689 Fixing tool tips for some scenarios that were desaligned

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -803,7 +803,8 @@ svg {
 }
 
 .suffleTd div.popover {
-	top: -5px !important;
+	top: 7px !important;
+	width: 212px  !important;
 }
 
 .planBundleSel{
